asgn4_21CS30023_21CS30003/y.output
Terminals unused in grammar

    OTHERS
    STRUCT
    TYPEDEF
    UNION
    CONSTANT
    HASH


State 317 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOATING_CONSTANT
    4                   | CHARACTER_CONSTANT
    5                   | STRING_LITERAL
    6                   | OPENRB expression CLOSERB

    7 postfix_expression: primary_expression
    8                   | postfix_expression OPENSB expression CLOSESB
    9                   | postfix_expression OPENRB argument_expression_list CLOSERB
   10                   | postfix_expression OPENRB CLOSERB
   11                   | postfix_expression DOT IDENTIFIER
   12                   | postfix_expression RIGHTARROW IDENTIFIER
   13                   | postfix_expression PLUSPLUS
   14                   | postfix_expression MINUSMINS
   15                   | OPENRB type_name CLOSERB OPENCB initializer_list CLOSECB
   16                   | OPENRB type_name CLOSERB OPENCB initializer_list COMMA CLOSECB

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list COMMA assignment_expression

   19 unary_expression: postfix_expression
   20                 | PLUSPLUS unary_expression
   21                 | MINUSMINS unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF OPENRB type_name CLOSERB

   25 unary_operator: BAND
   26               | KSTAR
   27               | PLUS
   28               | MINUS
   29               | TILDA
   30               | NOT

   31 cast_expression: unary_expression
   32                | OPENRB type_name CLOSERB cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression KSTAR cast_expression
   35                          | multiplicative_expression DIVIDE cast_expression
   36                          | multiplicative_expression MODULO cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression MINUS multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFTS additive_expression
   42                 | shift_expression RIGHTS additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression LESSTHAN shift_expression
   45                      | relational_expression GREATERTHAN shift_expression
   46                      | relational_expression LESSEQUAL shift_expression
   47                      | relational_expression GREATEREQUAL shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQUALEQUAL relational_expression
   50                    | equality_expression NOTEQUAL relational_expression

   51 and_expression: equality_expression
   52               | and_expression BAND equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression XOR and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression QUESTIONMARK expression COLON conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: EQUAL
   66                    | MULEQUAL
   67                    | DIVEQUAL
   68                    | MODEQUAL
   69                    | PLUSEQUAL
   70                    | MINUSEQUAL
   71                    | SHIFTLEQUAL
   72                    | SHIFTREQUAL
   73                    | ANDEQUAL
   74                    | XOREQUAL
   75                    | OREQUAL

   76 expression: assignment_expression
   77           | expression COMMA assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers init_declarator_list SEMICOLON
   80            | declaration_specifiers SEMICOLON

   81 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   82                       | type_specifier declaration_specifiers_opt
   83                       | type_qualifier declaration_specifiers_opt
   84                       | function_specifier declaration_specifiers_opt

   85 declaration_specifiers_opt: declaration_specifiers
   86                           | ε

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list COMMA init_declarator

   89 init_declarator: declarator
   90                | declarator EQUAL initializer

   91 storage_class_specifier: EXTERN
   92                        | STATIC
   93                        | AUTO
   94                        | REGISTER

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE
  102               | SIGNED
  103               | UNSIGNED
  104               | _BOOL
  105               | _COMPLEX
  106               | _IMAGINARY
  107               | enum_specifier

  108 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  109                         | type_qualifier specifier_qualifier_list_opt

  110 specifier_qualifier_list_opt: specifier_qualifier_list
  111                             | ε

  112 enum_specifier: ENUM identifier_opt OPENCB enumerator_list CLOSECB
  113               | ENUM identifier_opt OPENCB enumerator_list COMMA CLOSECB
  114               | ENUM IDENTIFIER

  115 identifier_opt: IDENTIFIER
  116               | ε

  117 enumerator_list: enumerator
  118                | enumerator_list COMMA enumerator

  119 enumerator: IDENTIFIER
  120           | IDENTIFIER EQUAL constant_expression

  121 type_qualifier: CONST
  122               | VOLATILE
  123               | RESTRICT

  124 function_specifier: INLINE

  125 declarator: pointer_opt direct_declarator

  126 pointer_opt: pointer
  127            | ε

  128 direct_declarator: IDENTIFIER
  129                  | OPENRB declarator CLOSERB
  130                  | direct_declarator OPENSB type_qualifier_list_opt assignment_expression_opt CLOSESB
  131                  | direct_declarator OPENSB STATIC type_qualifier_list_opt assignment_expression CLOSESB
  132                  | direct_declarator OPENSB type_qualifier_list STATIC assignment_expression CLOSESB
  133                  | direct_declarator OPENSB type_qualifier_list_opt KSTAR CLOSESB
  134                  | direct_declarator OPENRB parameter_type_list CLOSERB
  135                  | direct_declarator OPENRB identifier_list_opt CLOSERB

  136 type_qualifier_list_opt: type_qualifier_list
  137                        | ε

  138 assignment_expression_opt: assignment_expression
  139                          | ε

  140 identifier_list_opt: identifier_list
  141                    | ε

  142 pointer: KSTAR type_qualifier_list_opt
  143        | KSTAR type_qualifier_list_opt pointer

  144 type_qualifier_list: type_qualifier
  145                    | type_qualifier_list type_qualifier

  146 parameter_type_list: parameter_list
  147                    | parameter_list COMMA DOTDOTDOT

  148 parameter_list: parameter_declaration
  149               | parameter_list COMMA parameter_declaration

  150 parameter_declaration: declaration_specifiers declarator
  151                      | declaration_specifiers

  152 identifier_list: IDENTIFIER
  153                | identifier_list COMMA IDENTIFIER

  154 type_name: specifier_qualifier_list

  155 initializer: assignment_expression
  156            | OPENCB initializer_list CLOSECB
  157            | OPENCB initializer_list COMMA CLOSECB

  158 initializer_list: designation_opt initializer
  159                 | initializer_list COMMA designation_opt initializer

  160 designation_opt: designation
  161                | ε

  162 designation: designator_list EQUAL

  163 designator_list: designator
  164                | designator_list designator

  165 designator: OPENSB constant_expression CLOSESB
  166           | DOT IDENTIFIER

  167 statement: labeled_statement
  168          | compound_statement
  169          | expression_statement
  170          | selection_statement
  171          | iteration_statement
  172          | jump_statement

  173 labeled_statement: IDENTIFIER COLON statement
  174                  | CASE constant_expression COLON statement
  175                  | DEFAULT COLON statement

  176 compound_statement: OPENCB CLOSECB
  177                   | OPENCB block_item_list CLOSECB

  178 block_item_list: block_item
  179                | block_item_list block_item

  180 block_item: declaration
  181           | statement

  182 expression_statement: SEMICOLON
  183                     | expression SEMICOLON

  184 selection_statement: IF OPENRB expression CLOSERB statement
  185                    | IF OPENRB expression CLOSERB statement ELSE statement
  186                    | SWITCH OPENRB expression CLOSERB statement

  187 iteration_statement: WHILE OPENRB expression CLOSERB statement
  188                    | DO statement WHILE OPENRB expression CLOSERB SEMICOLON
  189                    | FOR OPENRB expression_opt SEMICOLON expression_opt SEMICOLON expression_opt CLOSERB statement
  190                    | FOR OPENRB declaration expression_opt SEMICOLON expression_opt CLOSERB statement

  191 expression_opt: expression
  192               | ε

  193 jump_statement: GOTO IDENTIFIER SEMICOLON
  194               | CONTINUE SEMICOLON
  195               | BREAK SEMICOLON
  196               | RETURN SEMICOLON
  197               | RETURN expression SEMICOLON

  198 translation_unit: external_declaration
  199                 | translation_unit external_declaration

  200 external_declaration: function_definition
  201                     | declaration

  202 function_definition: declaration_specifiers declarator declaration_list compound_statement
  203                    | declaration_specifiers declarator compound_statement

  204 declaration_list: declaration
  205                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    OTHERS (258)
    AUTO (259) 93
    BREAK (260) 195
    CASE (261) 174
    CHAR (262) 96
    CONST (263) 121
    CONTINUE (264) 194
    DEFAULT (265) 175
    DO (266) 188
    DOUBLE (267) 101
    ELSE (268) 185
    ENUM (269) 112 113 114
    EXTERN (270) 91
    REGISTER (271) 94
    FLOAT (272) 100
    FOR (273) 189 190
    GOTO (274) 193
    IF (275) 184 185
    INLINE (276) 124
    INT (277) 98
    LONG (278) 99
    RESTRICT (279) 123
    RETURN (280) 196 197
    SHORT (281) 97
    SIGNED (282) 102
    SIZEOF (283) 23 24
    STATIC (284) 92 131 132
    STRUCT (285)
    SWITCH (286) 186
    TYPEDEF (287)
    UNION (288)
    UNSIGNED (289) 103
    VOID (290) 95
    VOLATILE (291) 122
    WHILE (292) 187 188
    _BOOL (293) 104
    _COMPLEX (294) 105
    _IMAGINARY (295) 106
    CONSTANT (296)
    IDENTIFIER <stringVal> (297) 1 11 12 114 115 119 120 128 152 153 166 173 193
    STRING_LITERAL <stringVal> (298) 5
    INTEGER_CONSTANT <intVal> (299) 2
    FLOATING_CONSTANT <floatVal> (300) 3
    CHARACTER_CONSTANT <charVal> (301) 4
    OPENSB (302) 8 130 131 132 133 165
    CLOSESB (303) 8 130 131 132 133 165
    OPENRB (304) 6 9 10 15 16 24 32 129 134 135 184 185 186 187 188 189 190
    CLOSERB (305) 6 9 10 15 16 24 32 129 134 135 184 185 186 187 188 189 190
    OPENCB (306) 15 16 112 113 156 157 176 177
    CLOSECB (307) 15 16 112 113 156 157 176 177
    DOT (308) 11 166
    RIGHTARROW (309) 12
    PLUSPLUS (310) 13 20
    MINUSMINS (311) 14 21
    BAND (312) 25 52
    KSTAR (313) 26 34 133 142 143
    PLUS (314) 27 38
    MINUS (315) 28 39
    TILDA (316) 29
    NOT (317) 30
    DIVIDE (318) 35
    MODULO (319) 36
    LEFTS (320) 41
    RIGHTS (321) 42
    LESSTHAN (322) 44
    GREATERTHAN (323) 45
    LESSEQUAL (324) 46
    GREATEREQUAL (325) 47
    EQUALEQUAL (326) 49
    NOTEQUAL (327) 50
    XOR (328) 54
    BITWISEOR (329) 56
    AND (330) 58
    OR (331) 60
    QUESTIONMARK (332) 62
    COLON (333) 62 173 174 175
    SEMICOLON (334) 79 80 182 183 188 189 190 193 194 195 196 197
    DOTDOTDOT (335) 147
    EQUAL (336) 65 90 120 162
    MULEQUAL (337) 66
    DIVEQUAL (338) 67
    MODEQUAL (339) 68
    PLUSEQUAL (340) 69
    MINUSEQUAL (341) 70
    SHIFTLEQUAL (342) 71
    SHIFTREQUAL (343) 72
    ANDEQUAL (344) 73
    XOREQUAL (345) 74
    OREQUAL (346) 75
    COMMA (347) 16 18 77 88 113 118 147 149 153 157 159
    HASH (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    primary_expression (95)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression (96)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 8 9 10 11 12 13 14 19
    argument_expression_list (97)
        on left: 17 18
        on right: 9 18
    unary_expression (98)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 64
    unary_operator (99)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression (100)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression (101)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression (102)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression (103)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression (104)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression (105)
        on left: 48 49 50
        on right: 49 50 51 52
    and_expression (106)
        on left: 51 52
        on right: 52 53 54
    exclusive_or_expression (107)
        on left: 53 54
        on right: 54 55 56
    inclusive_or_expression (108)
        on left: 55 56
        on right: 56 57 58
    logical_and_expression (109)
        on left: 57 58
        on right: 58 59 60
    logical_or_expression (110)
        on left: 59 60
        on right: 60 61 62
    conditional_expression (111)
        on left: 61 62
        on right: 62 63 78
    assignment_expression (112)
        on left: 63 64
        on right: 17 18 64 76 77 131 132 138 155
    assignment_operator (113)
        on left: 65 66 67 68 69 70 71 72 73 74 75
        on right: 64
    expression (114)
        on left: 76 77
        on right: 6 8 62 77 183 184 185 186 187 188 191 197
    constant_expression (115)
        on left: 78
        on right: 120 165 174
    declaration (116)
        on left: 79 80
        on right: 180 190 201 204 205
    declaration_specifiers (117)
        on left: 81 82 83 84
        on right: 79 80 85 150 151 202 203
    declaration_specifiers_opt (118)
        on left: 85 86
        on right: 81 82 83 84
    init_declarator_list (119)
        on left: 87 88
        on right: 79 88
    init_declarator (120)
        on left: 89 90
        on right: 87 88
    storage_class_specifier (121)
        on left: 91 92 93 94
        on right: 81
    type_specifier (122)
        on left: 95 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 82 108
    specifier_qualifier_list (123)
        on left: 108 109
        on right: 110 154
    specifier_qualifier_list_opt (124)
        on left: 110 111
        on right: 108 109
    enum_specifier (125)
        on left: 112 113 114
        on right: 107
    identifier_opt (126)
        on left: 115 116
        on right: 112 113
    enumerator_list (127)
        on left: 117 118
        on right: 112 113 118
    enumerator (128)
        on left: 119 120
        on right: 117 118
    type_qualifier (129)
        on left: 121 122 123
        on right: 83 109 144 145
    function_specifier (130)
        on left: 124
        on right: 84
    declarator (131)
        on left: 125
        on right: 89 90 129 150 202 203
    pointer_opt (132)
        on left: 126 127
        on right: 125
    direct_declarator (133)
        on left: 128 129 130 131 132 133 134 135
        on right: 125 130 131 132 133 134 135
    type_qualifier_list_opt (134)
        on left: 136 137
        on right: 130 131 133 142 143
    assignment_expression_opt (135)
        on left: 138 139
        on right: 130
    identifier_list_opt (136)
        on left: 140 141
        on right: 135
    pointer (137)
        on left: 142 143
        on right: 126 143
    type_qualifier_list (138)
        on left: 144 145
        on right: 132 136 145
    parameter_type_list (139)
        on left: 146 147
        on right: 134
    parameter_list (140)
        on left: 148 149
        on right: 146 147 149
    parameter_declaration (141)
        on left: 150 151
        on right: 148 149
    identifier_list (142)
        on left: 152 153
        on right: 140 153
    type_name (143)
        on left: 154
        on right: 15 16 24 32
    initializer (144)
        on left: 155 156 157
        on right: 90 158 159
    initializer_list (145)
        on left: 158 159
        on right: 15 16 156 157 159
    designation_opt (146)
        on left: 160 161
        on right: 158 159
    designation (147)
        on left: 162
        on right: 160
    designator_list (148)
        on left: 163 164
        on right: 162 164
    designator (149)
        on left: 165 166
        on right: 163 164
    statement (150)
        on left: 167 168 169 170 171 172
        on right: 173 174 175 181 184 185 186 187 188 189 190
    labeled_statement (151)
        on left: 173 174 175
        on right: 167
    compound_statement (152)
        on left: 176 177
        on right: 168 202 203
    block_item_list (153)
        on left: 178 179
        on right: 177 179
    block_item (154)
        on left: 180 181
        on right: 178 179
    expression_statement (155)
        on left: 182 183
        on right: 169
    selection_statement (156)
        on left: 184 185 186
        on right: 170
    iteration_statement (157)
        on left: 187 188 189 190
        on right: 171
    expression_opt (158)
        on left: 191 192
        on right: 189 190
    jump_statement (159)
        on left: 193 194 195 196 197
        on right: 172
    translation_unit (160)
        on left: 198 199
        on right: 0 199
    external_declaration (161)
        on left: 200 201
        on right: 198 199
    function_definition (162)
        on left: 202 203
        on right: 200
    declaration_list (163)
        on left: 204 205
        on right: 202 205


State 0

    0 $accept: • translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   93 storage_class_specifier: AUTO •

    $default  reduce using rule 93 (storage_class_specifier)


State 2

   96 type_specifier: CHAR •

    $default  reduce using rule 96 (type_specifier)


State 3

  121 type_qualifier: CONST •

    $default  reduce using rule 121 (type_qualifier)


State 4

  101 type_specifier: DOUBLE •

    $default  reduce using rule 101 (type_specifier)


State 5

  112 enum_specifier: ENUM • identifier_opt OPENCB enumerator_list CLOSECB
  113               | ENUM • identifier_opt OPENCB enumerator_list COMMA CLOSECB
  114               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 116 (identifier_opt)

    identifier_opt  go to state 33


State 6

   91 storage_class_specifier: EXTERN •

    $default  reduce using rule 91 (storage_class_specifier)


State 7

   94 storage_class_specifier: REGISTER •
